fix z-indexing

--- a/src/main/hud/hud.module.scss
+++ b/src/main/hud/hud.module.scss
@@ -4,6 +4,7 @@
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 30;
   .upper-hud {
     width: 30vw;
     max-width: 200px;
